--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.library'
+
 apply plugin: 'kotlin-android'
+
 apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -33,4 +38,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // rxJava2
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    // rxAndroid2
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
