--- a/data/build.gradle
+++ b/data/build.gradle
@@ -33,4 +33,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // retrofit2, gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
+
+    // rxJava2
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
+    // rxAndroid2
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
