--- a/data/build.gradle
+++ b/data/build.gradle
@@ -44,4 +44,6 @@ dependencies {
 
     // rxAndroid2
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    implementation project(':domain')
 }
